compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__function_invalid_signature.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1319
expression: "\nfn f(a, \"b\") -> String {\n    a <> b\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn f(a, "b") -> String {
    a <> b
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:9
  │
2 │ fn f(a, "b") -> String {
  │         ^^^ I was not expecting this

Found a String, expected one of: 
- `)`
- a function parameter
